# ripple-test-suite

./: .gitignore  CMakeLists.txt  LICENSE.TXT  Makefile  README.md  main.sample.cpp
include/: zip.h
include/ripple-test-suite/: ripple-test-suite.h
mini_apps/: CMakeLists.txt
mini_apps/fully_connected_nn/: CMakeLists.txt  axpby.cpp  cross_entropy_loss.cpp  dense_layer.cpp  main.cpp  matmul.cpp  nanopool.hpp  relu.cpp  softmax.cpp  sum_along_columns.cpp
mini_apps/perf/: CMakeLists.txt
mini_apps/perf/hexagon/: CMakeLists.txt
mini_apps/perf/x86/: CMakeLists.txt  ao.ispc  ao_ref.cpp  ao_ripple.cpp  mandelbrot.cpp  mandelbrot.ispc  options.ispc  options_pricing.cpp  rgba_to_rgb.cpp  stencil.cpp  stencil.ispc
regression/: CMakeLists.txt  arithmetic.cpp  reductions.cpp
regression/math_functions/: CMakeLists.txt  math_functions.cpp  math_functions.h  math_functions_test.cpp
regression/narrow_shift/: CMakeLists.txt  narrow_shift.cpp  narrow_shift.h  narrow_shift_test.cpp
regression/scatter_gather/: CMakeLists.txt  scatter_gather.cpp  scatter_gather.h  scatter_gather_test.cpp
